# GAI-GRMS

./: .gitignore  README.md  pyproject.toml
data/: grievance_dataset.csv
notebooks/: text-classification.ipynb  text-summary.ipynb
