[project]
name = "gai-grms"
version = "0.1.0"
description = "Development of a Grievance Registration and Management System for the Fictional Country of Navistria"
authors = [
    {name = "Bhavik Talaviya"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "torchaudio (>=2.5.1,<3.0.0)",
    "transformers (>=4.48.1,<5.0.0)",
    "notebook (>=7.3.2,<8.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
