[project]
name = "gai-grms"
version = "0.1.0"
description = "Development of a Grievance Registration and Management System for the Fictional Country of Navistria"
authors = [
    {name = "Bhavik Talaviya"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "transformers (>=4.48.1,<5.0.0)",
    "notebook (>=7.3.2,<8.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "accelerate (>=1.3.0,<2.0.0)",
    "tiktoken (>=0.8.0,<0.9.0)",
    "protobuf (>=5.29.3,<6.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "sentence-transformers (>=3.4.0,<4.0.0)",
    "langdetect (>=1.0.9,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
